--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
         "laravelcollective/html": "5.2.*",
-        "illuminate/html": "5.0"
+        "illuminate/html": "5.0",
+        "guzzlehttp/guzzle": "6.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
